Bump h2o version to the latest version (SNAPSHOT)
It includes:
  - mainly fixes in API
   - renaming ValueString to BufferedString
   - renaming Vec#toEnum to Vec#toCategorical
   - reimplementing H2OContext#stop method to H2O#orderlyShutdown with
     timeout
   - fix usage of FrameUtils.createNewChunks() which now requires vector
     types